--- a/reto-frontend/src/app/globals.css
+++ b/reto-frontend/src/app/globals.css
@@ -1,3 +1,4 @@
+@import "~bootstrap/dist/css/bootstrap.min.css";
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -86,19 +87,10 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+
 
 @media (prefers-color-scheme: dark) {
   html {
